fix: replace readAllBytes() with IOUtils.toByteArray() for Android API 26-32 compatibility